# engineercafe-navigator

./: .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  DEVELOPER-GUIDE.md  DISCORD-ANNOUNCEMENT.md  ONBOARDING.md  PUSH-READY.md  Plans.md  README.md  package-lock.json  package.json
.claude/: settings.json
.claude/memory/: decisions.md  patterns.md
.claude/rules/: workflow.md
.cursor/commands/: handoff-to-claude.md  plan-with-cc.md  project-overview.md  review-cc-work.md  start-session.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-ci.yml  ci.yml
.serena/: project.yml
.serena/memories/: architecture-details.md  development-workflow.md  langgraph-migration.md  project-onboarding.md
backend/: .env.example  .gitignore  README.md  __init__.py  main.py  pyproject.toml  pytest.ini  requirements.txt
backend/agents/: __init__.py
backend/config/: __init__.py  settings.py
backend/examples/: __init__.py  basic_agent_example.py
backend/llm/: README.md  __init__.py  models.py  openrouter.py  provider.py
backend/models/: __init__.py  agent_response.py  types.py
backend/tests/: conftest.py
backend/tools/: __init__.py
backend/utils/: __init__.py  error_handler.py  language_processor.py  logger.py
backend/workflows/: __init__.py  main_workflow.py
docs/: AGILE-AI-DEVELOPMENT.md  BRANCH-PROTECTION-SETUP.md  LANGGRAPH-DEVELOPMENT-GUIDE.md  LOCAL-DEVELOPMENT-SETUP.md  README.md
frontend/: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
(+70 files in other folders)
